e2e-tests/tests/gr-demand-backup-haproxy/00-deploy-operator.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - timeout: 300
    script: |-
      set -o errexit
      set -o xtrace

      source ../../functions
      init_temp_dir # do this only in the first TestStep

      deploy_operator
      deploy_tls_cluster_secrets
      deploy_client
      apply_s3_storage_secrets
      if has_minio_storage; then
        deploy_minio
      fi
