e2e-tests/tests/gr-demand-backup-haproxy/01-deploy-operator.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - script: |-
      set -o errexit
      set -o xtrace

      source ../../functions
      init_temp_dir # do this only in the first TestStep

      deploy_operator
      deploy_non_tls_cluster_secrets
      deploy_tls_cluster_secrets
      deploy_client
      deploy_minio
    timeout: 300
