e2e-tests/tests/gr-demand-backup-haproxy/02-create-cluster.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
timeout: 10
commands:
  - script: |-
      set -o errexit
      set -o xtrace

      source ../../functions

      get_cr \
      	| yq eval ".spec.backup.storages.minio.type=\"s3\"" - \
      	| yq eval ".spec.backup.storages.minio.s3.bucket=\"operator-testing\"" - \
      	| yq eval ".spec.backup.storages.minio.s3.credentialsSecret=\"minio-secret\"" - \
      	| yq eval ".spec.backup.storages.minio.s3.endpointUrl=\"http://minio-service.${NAMESPACE}:9000\"" - \
      	| yq eval ".spec.backup.storages.minio.s3.region=\"us-east-1\"" - \
      	| yq eval ".spec.mysql.clusterType=\"group-replication\"" - \
      	| yq eval ".spec.proxy.router.enabled=false" - \
      	| yq eval ".spec.proxy.haproxy.enabled=true" - \
      	| kubectl -n "${NAMESPACE}" apply -f -
