e2e-tests/tests/gr-demand-backup-haproxy/03-create-backup.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - script: |
      set -o errexit
      set -o xtrace

      source ../../functions

      # Gets first storage defined and run backup
      storage_name=$(kubectl get ps gr-demand-backup-haproxy -n ${NAMESPACE} -o yaml | yq '(.spec.backup.storages // {}) | keys | .[0]')
      run_backup gr-demand-backup $storage_name
