e2e-tests/tests/gr-demand-backup-haproxy/03-write-data.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - script: |-
      set -o errexit
      set -o pipefail
      set -o xtrace

      source ../../functions

      run_mysql \
          "CREATE DATABASE IF NOT EXISTS myDB; CREATE TABLE IF NOT EXISTS myDB.myTable (id int PRIMARY KEY)" \
          "-h $(get_haproxy_svc $(get_cluster_name))"

      run_mysql \
          "INSERT myDB.myTable (id) VALUES (100500)" \
          "-h $(get_haproxy_svc $(get_cluster_name))"
