e2e-tests/tests/gr-demand-backup-haproxy/04-create-backup-minio.yaml
apiVersion: ps.percona.com/v1alpha1
kind: PerconaServerMySQLBackup
metadata:
  name: gr-demand-backup-haproxy-minio
spec:
  clusterName: gr-demand-backup-haproxy
  storageName: minio
