e2e-tests/tests/gr-demand-backup-haproxy/04-delete-data.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - script: |-
      set -o errexit
      set -o xtrace

      source ../../functions

      run_mysql \
          "TRUNCATE TABLE myDB.myTable" \
          "-h $(get_haproxy_svc $(get_cluster_name))"

      cluster_name=$(get_cluster_name)
      for i in 0 1 2; do
          data=$(run_mysql "SELECT * FROM myDB.myTable" "-h ${cluster_name}-mysql-${i}.${cluster_name}-mysql")
          kubectl create configmap -n "${NAMESPACE}" 04-delete-data-${i} --from-literal=data="${data}"
      done
