e2e-tests/tests/gr-demand-backup-haproxy/05-restore.yaml
apiVersion: ps.percona.com/v1
kind: PerconaServerMySQLRestore
metadata:
  name: restore-of-gr-demand-backup-haproxy
spec:
  clusterName: gr-demand-backup-haproxy
  backupName: gr-demand-backup-haproxy
