e2e-tests/tests/gr-demand-backup-haproxy/06-read-data.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - timeout: 30
    script: |-
      set -o errexit
      set -o xtrace

      source ../../functions

      cluster_name=$(get_cluster_name)
      for i in 0 1 2; do
          data=$(run_mysql "SELECT * FROM myDB.myTable" "-h ${cluster_name}-mysql-${i}.${cluster_name}-mysql")
          kubectl create configmap -n "${NAMESPACE}" 07-read-data-${i} --from-literal=data="${data}"
      done
