e2e-tests/tests/gr-demand-backup-haproxy/06-restore-from-minio.yaml
apiVersion: ps.percona.com/v1
kind: PerconaServerMySQLRestore
metadata:
  name: gr-demand-backup-haproxy-restore-minio
spec:
  clusterName: gr-demand-backup-haproxy
  backupName: gr-demand-backup-haproxy-minio
