e2e-tests/tests/gr-demand-backup-haproxy/97-drop-finalizer.yaml
apiVersion: ps.percona.com/v1
kind: PerconaServerMySQL
metadata:
  name: gr-demand-backup-haproxy
  finalizers: []
