e2e-tests/tests/gr-demand-backup-haproxy/98-remove-cluster-gracefully.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
  - apiVersion: ps.percona.com/v1
    kind: PerconaServerMySQL
    name: gr-demand-backup-haproxy
commands:
  - timeout: 60
    script: |-
      set -o errexit
      set -o xtrace

      source ../../functions

      destroy_operator
