e2e-tests/tests/gr-demand-backup-haproxy/99-remove-cluster-gracefully.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
- apiVersion: ps.percona.com/v1alpha1
  kind: PerconaServerMySQL
  metadata:
    name: gr-demand-backup-haproxy
commands:
  - script: |-
      set -o errexit
      set -o xtrace

      source ../../functions

      destroy_operator
    timeout: 60
