e2e-tests/tests/gr-demand-backup-haproxy/00-assert.yaml
apiVersion: v1
kind: Secret
metadata:
  name: minio-secret
type: Opaque
