e2e-tests/tests/gr-demand-backup-haproxy/01-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 420
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: gr-demand-backup-haproxy-mysql
status:
  observedGeneration: 1
  replicas: 3
  readyReplicas: 3
  currentReplicas: 3
  updatedReplicas: 3
  collisionCount: 0
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: gr-demand-backup-haproxy-haproxy
status:
  observedGeneration: 1
  replicas: 3
  readyReplicas: 3
  currentReplicas: 3
  updatedReplicas: 3
  collisionCount: 0
---
apiVersion: ps.percona.com/v1
kind: PerconaServerMySQL
metadata:
  name: gr-demand-backup-haproxy
status:
  conditions:
  - reason: Initializing
    status: "False"
    type: Initializing
  - reason: Ready
    status: "True"
    type: Ready
  - message: InnoDB cluster successfully bootstrapped with 3 nodes
    reason: InnoDBClusterBootstrapped
    status: "True"
    type: InnoDBClusterBootstrapped
  mysql:
    ready: 3
    size: 3
    state: ready
  haproxy:
    ready: 3
    size: 3
    state: ready
  state: ready
