e2e-tests/tests/gr-demand-backup-haproxy/03-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 300
---
kind: PerconaServerMySQLBackup
apiVersion: ps.percona.com/v1
metadata:
  name: gr-demand-backup-haproxy
status:
  state: Succeeded
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: gr-demand-backup-haproxy-mysql
status:
  observedGeneration: 1
  replicas: 3
  readyReplicas: 3
  currentReplicas: 3
  updatedReplicas: 3
  collisionCount: 0
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: gr-demand-backup-haproxy-haproxy
status:
  observedGeneration: 1
  replicas: 3
  readyReplicas: 3
  currentReplicas: 3
  updatedReplicas: 3
  collisionCount: 0
