e2e-tests/tests/gr-demand-backup-haproxy/04-assert.yaml
apiVersion: ps.percona.com/v1alpha1
kind: PerconaServerMySQLBackup
metadata:
  name: gr-demand-backup-haproxy-minio
status:
  state: Succeeded
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gr-demand-backup-haproxy-mysql
status:
  collisionCount: 0
  currentReplicas: 3
  observedGeneration: 1
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gr-demand-backup-haproxy-haproxy
status:
  collisionCount: 0
  currentReplicas: 3
  observedGeneration: 1
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
