e2e-tests/tests/gr-demand-backup-haproxy/05-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 500
---
apiVersion: ps.percona.com/v1
kind: PerconaServerMySQL
metadata:
  name: gr-demand-backup-haproxy
status:
  mysql:
    ready: 3
    size: 3
    state: ready
  haproxy:
    ready: 3
    size: 3
    state: ready
  state: ready
---
kind: PerconaServerMySQLRestore
apiVersion: ps.percona.com/v1
metadata:
  name: restore-of-gr-demand-backup-haproxy
status:
  state: Succeeded
